# iscons

./: CITATION.cff  CMakeLists.txt  README.md
include/: command_registry.h  oeis_paths.h
src/: cmds.txt  main.cpp  oeis_paths.cpp
src/config/: iscons.conf
src/ext/: fetch.cpp  pull.cpp  run.cpp  update.cpp  version.cpp
